--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -11,23 +11,29 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
       - name: Set up JDK 19
         uses: actions/setup-java@v3
         with:
           java-version: '19'
           distribution: 'temurin'
           cache: maven
+
       - uses: s4u/maven-settings-action@v2.8.0
+
       - name: Build aas-camera with Maven
-        run: mvn package
+        run: mvn -Ddocker.image.skip=true package
+
       - name: Build camera-aas image
         working-directory: .
         run: docker-compose build aas-camera
+
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_REGISTRY_USERNAME  }}
           password: ${{ secrets.DOCKER_REGISTRY_PASSWORD  }}
+
       - name: Push docker image
         working-directory: .
         run: docker-compose push
